# zero-to-prod

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  spec.yaml
.cargo/: deny.toml
.github/workflows/: audit.yml  rust.yml
migrations/: 20250425151754_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
