[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Vickouma77 <Vickprestone20@gmail.com>"]
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.9.0"
config = "0.15.8"
reqwest = {version = "0.12.12"}
serde = {version = "1.0.218", features = ["derive"]}
sqlx = {version = "0.8.3", features = [
    "runtime-tokio",
    "runtime-async-std",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]}
tokio = {version = "1.43.0", features = ["macros", "rt-multi-thread", "rt"]}
