[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Vickouma77 <Vickprestone20@gmail.com>"]
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.9.0"
config = "0.15.9"
chrono = "0.4.40"
env_logger = "0.11.6"
log = "0.4.26"
reqwest = {version = "0.12.12"}
secrecy = { version = "0.10.3", features = ["serde"] }
serde = {version = "1.0.219", features = ["derive"]}
tokio = {version = "1.44.0", features = ["macros", "rt-multi-thread", "rt"]}
tracing = {version = "0.1.41", features = ["log"]}
tracing-actix-web = "0.7.16"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = {version = "0.3.19", features=["registry", "env-filter"]}
uuid = {version = "1.15.1", features = ["v4"]}

[dependencies.sqlx]
 version = "0.8.3" 
 default-features = false
 features = [
    "runtime-tokio",
    "runtime-async-std",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
once_cell = "1.20.3"
